force-app/main/default/objects/Invoice__c/fields/Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Paid??</label>
    <type>Checkbox</type>
</CustomField>