force-app/main/default/objects/Invoice__c/fields/Patient_Nme__c.field-meta.xml
<CustomField>
    <fullName>Patient_Nme__c</fullName>
    <label>Patient Nme</label>
    <length>125</length>
    <type>Text</type>
</CustomField>